tests/semantic/decl_collection/snapshots/r#mod__semantic__global_decl_collection__func_collection__func_with_param.snap
---
source: tests/semantic/decl_collection/func_collection.rs
expression: "&test_ctx.prog_ctx.func_ctx"
---
funcs:
  0:
    name: greet
    namespace_id: 0
    func_type: Global
    params:
      - label: ~
        name: param
        var_id: 0
        value_type:
          Primitive: Int
        def_val:
          kind:
            IntLiteral: 0
          value_type:
            Primitive: Int
          range:
            start: 0
            end: 0
        range:
          start: 0
          end: 0
    return_type:
      Primitive: Void
    block:
      body: []
      scope_id: 2
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  ? - 0
    - greet
  : 0
next_function_id: 1
